<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:enabled="true"
        android:icon="@drawable/filter"
        android:title="Фильтр"
        app:showAsAction="always" />
</menu>